# SOPT

./: .env.example  .gitignore  API.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  configure.py  package-lock.json  package.json  rank.sql  sqlx-data.json  webpack.config.js
.github/workflows/: CI.yml
SOPT/: Cargo.toml
SOPT-derive/: Cargo.toml
SOPT-derive/src/: lib.rs
SOPT/migrations/: 20210226164926_add-time-to-torrent_info.sql  20210306084312_tag-up.sql  20210313062510_add-role-to-users.sql
SOPT/src/: error.rs
SOPT/src/data/: torrent.rs  torrent_info.rs
SOPT/tests/: cucumber.rs  sign_up_and_login.rs
SOPT/tests/features/: sign_up_and_login.feature
app/controller/: home.ts
backend/: Cargo.toml  sqlx-data.json
backend/.sqlx/: query-054313cfc5b4eebdc97456ab65388d630997db004f9446a88125364ccd10d94a.json  query-1020c537df8fab29df9baeb108e67748dc9228ff104b42f82619da5610589a3c.json  query-10cc74d99cbeb3d976de9cdf3073582f8ea8fc6d22f5c3fde2440ae123e811a9.json  query-1550c6080fbd3b59ee1aba656b01a8bd564c2a541255bc71446baba839d5051e.json  query-1a0ad49e551d48bc122ae4c8f73d95106e9b0a28ad634018098b163d07cd8bd7.json  query-1ae3e403e10c780d77d66d39f6d51476d836725eae86458f5496c04057872416.json  query-1b786843a6be3b725656bcd803af16c7a979e444fafc7113ee501d7e10958ef3.json  query-1f0abc9836e6eca63e580be12f5d73a7329fe6f585ca1f5dfc82166d01f9660d.json  query-22368b379d8c9f89bced04814cc464acc31ce4499ed92b56c80ab11b034604b4.json  query-227abd4e4d9baeb2e3e41336137a39b817ab20a0527a6ca258adcd77346a2ee4.json  query-29031a17f178f0231c46d8adbbd947f8f36c32e916f6f5e8ca7ecf68875446d9.json  query-2bc77f3a229ea2e42fa632b20a1e5678fa296b17f3a2e8f188eb6ae6a6df4d51.json  query-31af7cbe54f12b7dd1e6a7f3a2e318387e4ab8b522715ac859c7600de3d718ed.json  query-35511afeb1899a54c3d9ab7e35f946de4477579fd007a4c28413fc7e0fc48668.json  query-3720c7b66e4154b3999f67e7feaa6db560919f2765787b3d15aa8d078ef52582.json  query-3e8d11d9b0591f565eb958ab0101607f911b5a3f59e7fb10a2b725476215fb12.json  query-42d78adb0b34afb68fa209635248f434d45a0ab184bd130a244d80cf72352834.json  query-445817b9bb879ea656b400cabfd1b15ac0ef22444e5edc5cd658e580fe350794.json  query-446753d6b1f5236900fed95398726a18902ec288924551c28d570fcc55f7e3d7.json  query-46b1c3d7bc9568afbe08f47c12967fb519a35637e799d23c8964d133931b30cc.json  query-4b3761fd78658f738687441e4315e904ee052c90376fbb2b51ac252c6a647015.json  query-4e7e8856be46fc2e8ad758d21012f63efa950468d14a23fd41b6192167e94a14.json  query-517a15fd516e892c221ed81ad996fdbcbdf6d91ac71e32640e725a3b54ce5f28.json  query-52e1a68533bf5dc82005967b33bc1dddf1f7cb492219b90b5609b2d234e71c93.json  query-546ec2490296998428dd6ee3b1ea9ba8ec88bc107212e812dbb994c082c5a2de.json  query-57aacededf6aa8fdb703614b44e63131ba8cffd0fe07f45e7b918f51575cb255.json  query-5ca74f7f694b446bf0ad2425fc19c08491ca5a57f3f8ff29b5d95b20ae94757e.json  query-674af5859c4e82fae485f79d637818745a6f0db64c00e22dd5f99acfb4ed1cdc.json  query-6a452ba84452fc3b805baa4f349cfa7c688bc25bb6166f9ebe85130221688610.json  query-6d62ad8a9daf95a14eca4744c3cb89997b91142a2ff5d0ea20636dada7fcf5bf.json  query-71232b387d2d2dea5bc57a58f891aa5f215fafbb77f27e3309fc7b931c5f9292.json  query-7148b7cbfa168460aec841e24642eca77880f9a5526e985ddf843159217dc667.json  query-726a3a100df97a6873a90910b5cc9c202520c4cef11c50ced111137dae956a4e.json  query-75b24f3e23fd886115531e168801fcf9964dae6118dc29e3e87c9975e750c519.json  query-75e02dd2d9d8bf2ecdb17da953b5e192df62dbaa2bc558c8d6b1a7aad6b90b03.json  query-7abf8e37ee82eb654d00b207c60aadbd01b352c773cad7f7d0c91bb64d9fda3d.json  query-7bd990f18de7d1df380aa7b3f840fdb7293add83ac2a9332b6f03cee9dce5311.json  query-8194b526b84a200ac38f195658877f82b5a2b79580e499712bb99d2ca43ffbd0.json  query-847f824138fed7549b9d7de550f5c4dfeafa72d1cb79eb911ad0baa60db5ee0c.json  query-848f336bb11b67020339f8d16fae22d242f9f8d614c2e48b373f3fa5e2e86dcb.json  (+32 more)
backend/src/: config.rs  error.rs  main.rs  util.rs
backend/src/controller/: admin.rs  invitation.rs  mod.rs  request.rs  torrent.rs  tracker.rs  user.rs
backend/src/data/: activation.rs  mod.rs  rank.rs  torrent.rs  user.rs  user_info.rs
backend/src/data/kv/: csv_storage.rs  mod.rs  rocks.rs  sled_embedded.rs
backend/src/data/oss/: mod.rs  s3.rs
backend/src/data/response/: user.rs
config/: config.default.ts  config.local.ts  filtered-email  log4rs.yaml  log4rs_tracker.yaml  manifest.json  plugin.local.ts  plugin.ts  redis.conf
derive/: Cargo.toml
derive/src/: lib.rs
docs/: API.md  CHANGELOG.md  PRINCIPLE.md  README.md
migrations/: 20210224181959_user-up.sql  20210224182037_invitation-up.sql  20210225075925_torrent-info-up.sql  20210226164207_rank-up.sql  20210227075834_user_info-up.sql  20210227124920_add-username-to-user_info.sql  20210306084312_tag-up.sql  20210308064049_add-stick-to-torrent_info.sql  20210308113806_torrent-up.sql  20210311145604_user_info-money-check.sql  20210312152727_add-infohash-to-torrent.sql  20210314132040_add-privacy-to-user_info.sql  20210317164207_rank-up.sql  20210317170511_change-rank-user_info.sql  20210319075011_make-age-upload-rank-not-null.sql  20210321113705_add-download-info-to-torrent_info.sql  20210323115954_torrent_status-up.sql  20210330105105_message-up.sql  20210402035639_add-activated-to-users.sql  20210402040125_activation-up.sql  20210429081233_alter-user_info_rank-type.sql  20210503093540_insert-initial-rank.sql
proxy/: Cargo.toml  README.md
proxy/src/: error.rs  filter.rs  main.rs
proxy/src/config/: client.rs  mod.rs
proxy/src/tracker_route/: context.rs  data.rs  mod.rs
sql/: schema.sql
src/: config.rs  email_address.pest  error.rs  lib.rs  main.rs  rocksdb.rs  search.rs  util.rs
src/controller/: admin.rs  config.rs  invitation.rs  message.rs  mod.rs  request.rs  torrent.rs  tracker.rs  user.rs
src/data/: activation.rs  invitation.rs  message.rs  mod.rs  rank.rs  tag.rs  torrent.rs  torrent_info.rs  torrent_status.rs  user.rs  user_info.rs
tests/: cucumber.rs  sign_up_and_login.rs
tracker/: Cargo.toml  README.md
tracker/src/: lib.rs  peerinfo.rs  util.rs
tracker/src/seederinfo/: mod.rs  seederarray.rs  seedermap.rs
(+15 files in other folders)
