[package]
authors = [
  "Brethland Yang <brethland@gmail.com>",
  "CattChen",
  "Five Qin",
]
description = "Next generation private tracker framework"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "sopt"
repository = "https://github.com/njupt-nyr/sopt/"
version = "0.1.0"

[lib]
name = "sopt"

[[test]]
harness = false
name = "cucumber"

[features]
default = ["email-restriction", "message"]
email-restriction = []
message = []

[dependencies]
# actix and sql stuff
actix-multipart = "0.3.0"
actix-web = "3.3.2"
rocksdb = {git = "https://github.com/rust-rocksdb/rust-rocksdb"}
sqlx = {version = "0.4.1", features = ["postgres", "runtime-actix-native-tls", "chrono", "json"]}
tokio = {version = "^0.2", features = ["macros", "time"]}
rust-s3 = "0.26.4"

#serde related
serde = {version = "*", features = ["derive"]}
serde_bencode = "*"
serde_bytes = "*"
serde_json = "*"
serde_qs = "*"

# utils
chrono = {version = "0.4.19", features = ["serde"]}
config = "*"
dotenv = "*"
env_logger = "*"
futures = "0.3.13"
hex = "*"
jsonwebtoken = "7"
lazy_static = "*"
lettre = "0.10.0-alpha.4"
pest = "*"
pest_derive = "*"
sanitize-filename = "*"
sopt-derive = {git = "https://github.com/NJUPT-NYR/SOPT-derive", branch = "master"}
strsim = "*"

# crypto related
base64 = "*"
rand = "0.8.3"
rust-argon2 = "0.8"
sha-1 = "0.9"
sha2 = "0.9"

[dev-dependencies]
cargo-husky = {version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt"]}
cucumber_rust = {git = "https://github.com/bbqsrc/cucumber-rust", branch = "main"}
reqwest = {version = "^0.10", features = ["json"]}
