[package]
name = "sopt"
workspace = "../"
version = "0.2.1"
authors = [
    "Brethland Yang <brethland@gmail.com>",
    "CattChen",
    "Five Qin <qinwu.qw@alibaba-inc.com>",
]
description = "Next generation private tracker framework"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/njupt-nyr/sopt/backend/"
default-run = "sopt"

[features]
default = ["email-restriction", "message", "sled"]
email-restriction = []
message = []

[dependencies]
# actix and sql stuff
actix-multipart = "0.6.0"
actix-web = "4.3.1"
csv = {version = "1.2.2", optional = true}
rocksdb = {version = "0.21.0", optional = true}
sled = {version = "0.34.7", optional = true}
sqlx = {version = "0.7.0", features = ["postgres", "runtime-tokio", "chrono", "json"]}
tokio = {version = "^1.29", features = ["macros", "time"]}

#serde related
serde = {version = "^1", features = ["derive"]}
serde_bencode = "*"
serde_bytes = "*"
serde_json = "*"
serde_qs = "*"

# utils
cfg-if = "1.0"
chrono = {version = "0.4.26", features = ["serde"]}
config = "0.13.3"
dotenv = "*"
log4rs = "1"
futures = "0.3.28"
hex = "*"
jsonwebtoken = "8"
lazy_static = "*"
lettre = "0.10.4"
pest = "*"
pest_derive = "*"
reqwest = {version = "0.11", features = ["json"]}
sanitize-filename = "*"
sopt_derive = {path = "../derive"}
strsim = "*"

# crypto related
base64 = "0.21.2"
rand = "0.8.5"
rust-argon2 = "1.0"
sha-1 = "0.10"
sha2 = "0.10"

[dev-dependencies]
cargo-husky = {version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt"]}
