[package]
name = "sopt_proxy"
workspace = "../"
version = "0.2.1"
authors = [
    "Brethland Yang <brethland@gmail.com>",
    "Five Qin <qinwu.qw@alibaba-inc.com>",
]
description = "Next generation private tracker framework"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/njupt-nyr/sopt/proxy/"

[dependencies]
serde = {version = "^1", features = ["derive"]}
actix-web = "4"
sqlx = {version = "0.7.0", features = ["postgres", "runtime-tokio"]}
deadpool = "^0.9"
deadpool-redis = "0.12.0"
bendy = "*"
bloom = "0.3.2"
tokio = { version = "^1.29", features = ["sync","rt"] }
config = "0.13.3"
dotenv = "*"
serde_qs = "*"
lazy_static = "*"
reqwest = { version = "0.11", features = [ "json" ] }
hex = "*"
log4rs = "1"
